--- a/weixinApp/present/css/layout.css
+++ b/weixinApp/present/css/layout.css
@@ -20,10 +20,19 @@
     moz-background-size: cover;
 }
 .part-one{
-    width: 80%;
+    width: 90%;
     margin:0 auto;
     margin-bottom: 2rem;
     max-width: 45rem;
+}
+@-moz-document url-prefix(){
+    .part-one{
+        width: 90%;
+        margin:0 auto;
+        margin-bottom: 2rem;
+        max-width: 45rem;
+        margin-top: 8rem;
+    }
 }
 .part-one-title{
     font-size: 2.6rem;
@@ -31,7 +40,7 @@
     font-weight: bold;
     padding: 1rem;
     color: #333;
-    width: 80%;
+    width: 90%;
     max-width: 45rem;
     margin: 0 auto;
 }
@@ -39,7 +48,7 @@
     font-size: 1.6rem;
     line-height: 2rem;
     color: #333;
-    width: 80%;
+    width: 90%;
     max-width: 45rem;
     margin: 0 auto;
 }
@@ -57,19 +66,18 @@
 }
 .app-title-banner{
     height: 7.8rem;
-    padding-top: 4rem;
+    padding-top: 3rem;
     color: #fff;
 }
 .title-number{
     font-size: 1rem;
-    width: 80%;
+    width: 90%;
     margin:0 auto;
     max-width: 32rem;
 }
 .item-title{
     font-size: 1.8rem;
     color: #000;
-    width: 70%;
 }
 .item-choose-img{
     display: inline-block;
@@ -93,9 +101,7 @@
     margin-top: 1rem;
 }
 .app-logo{
-    position: absolute;
-    right: 0;
-    top: 25px;
+    text-align: center;
 }
 .item-choose:active{
     background-color: #b28850;
@@ -153,18 +159,17 @@
     height: 100%;
 }
 .today-hot-one{
-    background-color: #fff;
     margin-top: 3rem;
     padding:0.4rem;
 }
 .today-hot-one ul li {
     line-height: 2.5rem;
-    background: url("../images/tag.jpg") left no-repeat;
+    position: relative;
     margin: 1rem;
     margin-left: 0.2rem;
     margin-right: 0.2rem;
     text-align: left;
-    border: 1px dashed #d0d0d0;
+    border: 2px dashed #8c6d44;
     padding: 0.4rem;
     padding-left: 4.6rem;
 }
@@ -173,13 +178,11 @@
     margin-right:0.6rem;
 }
 .today-hot{
-    background-color: #f4f4f4;
-    margin-top: 3rem;
+    text-align: center;
     padding:0.4rem;
 }
 .today-hot ul li {
     line-height: 3rem;
-    margin: 1rem;
     text-align: center;
 }
 .today-hot ul li img{
@@ -220,7 +223,7 @@ body{
         font-weight: bold;
         padding: 1rem;
         color: #333;
-        width: 80%;
+        width: 90%;
         max-width: 45rem;
         margin: 0 auto;
     }
@@ -240,7 +243,7 @@ body{
     .part-one-content {
         font-size: 1.8rem;
         color: #333;
-        width: 80%;
+        width: 90%;
         max-width: 45rem;
         line-height: 2.4rem;
         margin: 0 auto;
@@ -251,7 +254,7 @@ body{
         font-size: 1.4rem;
         line-height: 2rem;
         color: #333;
-        width: 80%;
+        width: 90%;
         max-width: 45rem;
         margin: 0 auto;
     }
