--- a/newGuo/global/styles/layout.css
+++ b/newGuo/global/styles/layout.css
@@ -1,24 +1,7 @@
 .site-header .header-nav .right{
     float: right;
 }
-.cart-button{
-    width: 120px;
-    height: 45px;
-    background-color: #ff9900;
-    line-height: 45px;
-    font-size: 12px;
-    text-align: center;
-    position: relative;
-}
-.cart-detail{
-    width: 200px;
-    height: 200px;
-    background-color: #fff;
-    border:1px solid #c7000b;
-    position: absolute;
-    right: 0;
-    top: 45px;
-}
+
 .site-header .header-nav .nav-main-list .nav-main-item span.arrow{
     display: none;
 }
@@ -85,7 +68,41 @@
 .site-header .header-nav .nav-main-list .nav-main-item ul li{
     border-top:1px solid #ccc;
 }
-
+.mini-cart{
+    position: relative;
+    z-index: 21;
+    display: block;
+    width: 104px;
+    height: 20px;
+    padding: 9px 10px;
+    border: 1px solid #ff9900;
+    line-height: 20px;
+    text-align: center;
+    color: #333;
+    background: #ff9900;
+}
+.mini-cart-list {
+    display: none;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    z-index: 20;
+    width: 292px;
+    padding: 20px;
+    border: 1px solid #c7000b;
+    font-size: 12px;
+    background: #fff;
+}
+.mini-cart-on{
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding-bottom: 31px;
+    border-color: #c7000b;
+    border-bottom: 0;
+    color: #c7000b;
+    background: #fff;
+}
 
 @media (max-width: 1260px) {
     .site-header .header-nav .nav-main-list .nav-main-item{
