--- a/site/css/base.css
+++ b/site/css/base.css
@@ -250,6 +250,16 @@ nav{height: 4rem; line-height: 4rem; background-color: #fff; text-align: center;
     padding-bottom:0.6rem;
     width:100%
 }
+.m-input-fcode{
+    height: 2rem;
+    line-height: 2rem;
+    border: 1px solid #d0d0d0;
+    padding-left: 0.6rem;
+    border-radius: 0.416666rem;
+    padding-top:0.6rem;
+    padding-bottom:0.6rem;
+    width:98%
+}
 .m-input-border{
     border:0.1rem solid #d0d0d0;
 }
