--- a/newGuo/cart/styles/cart.css
+++ b/newGuo/cart/styles/cart.css
@@ -257,6 +257,38 @@ h2.order-title {
     float: left;
     margin-left: 30px;
 }
+.shopcartstep {
+    height: 24px;
+    padding: 30px 0 25px;
+}
+.shopcartstep li {
+    list-style: none;
+    float: left;
+    color: #cdcdcd;
+    font-size: 14px;
+    margin-right: 30px;
+    line-height: 24px;
+}
+.shopcartstep li.complete {
+    color: #000;
+}
+.shopcartstep li.complete span {
+    background: #c33829;
+}
+.shopcartstep li span {
+    display: inline-block;
+    width: 24px;
+    line-height: 24px;
+    height: 24px;
+    background: #d1d1d2;
+    color: #fff;
+    text-align: center;
+    margin-right: 10px;
+}
+.find-process{
+    width: 470px;
+    margin: 50px auto 30px auto;
+}
 @media (max-width: 1260px) {
     .address-list>div>div{
         width: 230px;
