--- a/newGuo/global/styles/layout.css
+++ b/newGuo/global/styles/layout.css
@@ -224,6 +224,7 @@ ul{list-style: none;}
 }
 .model-two{
     text-align: center;
+    margin-bottom: 490px;
 }
 .model-two>div>div{
     background-color: #000;
@@ -454,7 +455,33 @@ ul{list-style: none;}
    width: 230px;
     margin: 0 auto;
 }
-
+.left-nav{
+    width: 109px;
+    top: 43px;
+    position: absolute;
+    left: 0;
+}
+.left-nav ul{
+    margin:0;
+    padding:0;
+    background-color: #f8f8f8;
+}
+.left-nav ul li {
+    text-align: center;
+    font-size: 16px;
+    height: 50px;
+    line-height: 50px;
+    border-top: 1px solid #ccc;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.left-nav ul li:first-child{
+    border-top: none;
+}
+.nav-selected{
+    color: #c33829!important;
+    font-weight: 600;
+}
 @media (max-width: 1260px) {
     .left-angle{
         color: #ccc;
