--- a/newGuo/global/styles/layout.css
+++ b/newGuo/global/styles/layout.css
@@ -10,26 +10,44 @@ ul{list-style: none;}
     background: url("../../images/banner_01.jpg") center top no-repeat;
     width: 1440px;
     height: 500px;
+    position: relative;
+    cursor: pointer
 }
 .index-banner-2{
     background: url("../../images/banner_02.jpg") center top no-repeat;
     width: 1440px;
     height: 500px;
+    position: relative;
+    cursor: pointer
 }
 .index-banner-3{
     background: url("../../images/banner_03.jpg") center top no-repeat;
     width: 1440px;
     height: 500px;
+    position: relative;
+    cursor: pointer
 }
 .index-banner-4{
     background: url("../../images/banner_04.jpg") center top no-repeat;
     width: 1440px;
     height: 500px;
+    position: relative;
+    cursor: pointer
+}
+.button-disable{
+    color: #9c9c9c!important;
 }
 .index-banner-5{
     background: url("../../images/banner_05.jpg") center top no-repeat;
     width: 1440px;
     height: 500px;
+    position: relative;
+    cursor: pointer
+}
+.purchase-button-position{
+    position: absolute;
+    right: 337px;
+    bottom: 49px;
 }
 #billboard{
     background-color: #333;
@@ -460,7 +478,7 @@ button{
 }
 .left-nav{
     width: 109px;
-    top: 43px;
+    top: 51px;
     position: absolute;
     left: 0;
 }
