--- a/newGuo/cart/styles/cart.css
+++ b/newGuo/cart/styles/cart.css
@@ -372,6 +372,14 @@ h2.order-title {
     margin-top: 5px;
     margin-bottom: 20px;
 }
+.bg-cover{
+    width: 100%;
+    height: 100%;
+    display: block;
+    z-index: 8000;
+    background-color: rgba(255,255,255,0.5);
+    position: fixed;
+}
 .nav-top-bottom {
     position: fixed;
     right: 30px;
