--- a/newGuo/global/styles/layout.css
+++ b/newGuo/global/styles/layout.css
@@ -27,13 +27,10 @@ ul{list-style: none;}
     position: relative;
     cursor: pointer
 }
-.index-banner-4{
-    background: url("../../images/banner_04.jpg") center top no-repeat;
-    width: 1440px;
-    height: 500px;
-    position: relative;
-    cursor: pointer
+.index-purchase-button{
+    line-height:45px; width: 200px; height: 45px;
 }
+
 .button-disable{
     color: #9c9c9c!important;
 }
@@ -598,5 +595,43 @@ button{
         line-height: 21px;
         float: right;
         margin-right: 10px;
+    }
+    .index-banner-1{
+        background: url("../../images/banner_01_ipad.jpg") center top no-repeat;
+        width: 1140px;
+        height: 396px;
+        position: relative;
+        cursor: pointer
+    }
+    .index-banner-2{
+        background: url("../../images/banner_02.jpg") center top no-repeat;
+        width: 1140px;
+        height: 396px;
+        position: relative;
+        cursor: pointer
+    }
+    .index-banner-3{
+        background: url("../../images/banner_03.jpg") center top no-repeat;
+        width: 1140px;
+        height: 396px;
+        position: relative;
+        cursor: pointer
+    }
+    .index-purchase-button{
+        line-height: 38px;
+        width: 155px;
+        height: 38px;
+    }
+    .purchase-button-position{
+        position: absolute;
+        right: 289px;
+        bottom: 42px;
+    }
+    #billboard {
+        background-color: #333;
+        width: 100%;
+        margin: 0 auto;
+        height: 396px;
+        position: relative;
     }
 }
